# dto/DeletePersonResponseDto.go
@@ -1,0 +1,20 @@
+package dto
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+type DeletePersonResponseDto struct {
+	Code int    `json:"code"`
+	Text string `json:"text"`
+}
+
+func (deletePersonDto DeletePersonResponseDto) String() string {
+	marshal, err := json.Marshal(deletePersonDto)
+	if err != nil {
+		return fmt.Sprintf("{\"code\":%d,\"text\":\"%s\"}",
+			deletePersonDto.Code, deletePersonDto.Text)
+	}
+	return string(marshal)
+}
